<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin"
    android:background="#F383AC"
    tools:context=".DatosSkinActivity">

    <TextView
        android:id="@+id/tvNombreD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="30sp"
        android:text="@string/tv_nombre_datos"/>
    <TextView
        android:id="@+id/tvDescripD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:layout_below="@id/tvNombreD"
        android:textSize="24sp"
        android:text="@string/tv_descrip_datos"/>
    <TextView
        android:id="@+id/tvRarezaD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:layout_below="@id/tvDescripD"
        android:textSize="24sp"
        android:text="@string/tv_rareza_datos"/>
    <TextView
        android:id="@+id/tvCosteD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:layout_below="@id/tvRarezaD"
        android:textSize="24sp"
        android:text="@string/tv_coste_datos"/>

    <LinearLayout
        android:id="@+id/llPuntuacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_below="@id/tvCosteD"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvMediaP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="@string/tv_media"/>
        <TextView
            android:id="@+id/tvTotalPuntos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="@string/tv_total_puntos"/>
        <TextView
            android:id="@+id/tvCalidadVotos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="@string/tv_calidad_votos"/>


    </LinearLayout>

    <ImageView
        android:id="@+id/imgSkin"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@id/llPuntuacion"
        android:layout_centerInParent="true"
        android:layout_marginTop="71dp" />

</RelativeLayout>